--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "version": "0.4.0",
   "engines": {
-    "vscode": "^1.96.0"
+    "vscode": ">=1.96.0"
   },
   "categories": [
     "Programming Languages"
